- Attempted fix for file references in google cloud run