@@ -9,6 +9,7 @@ import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
 import org.springframework.stereotype.Repository;
 
 import java.io.File;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.util.HashMap;
 import java.util.Map;
@@ -27,8 +28,8 @@ public class ItemRepository {
         sqlParams.put("itemName", itemName);
 
         try{
-            File sqlFile = new ClassPathResource("sql/items/InsertItem.sql").getFile();
-            String sql = new String(Files.readAllBytes(sqlFile.toPath()));
+            InputStream sqlInputStream = new ClassPathResource("sql/items/InsertItem.sql").getInputStream();
+            String sql = new String(sqlInputStream.readAllBytes());
             jdbcTemplate.update(sql, sqlParams);
         } catch (Exception exception){
             log.error("Error while trying to create a new item " + itemName);
